# Popper

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  popper.py  pyproject.toml  requirements.txt  run-eamples.sh  setup.py  solvers.md
.github/workflows/: prt-test.yml  test.yml
docs/: primer.md
examples/: iggp-parser.py
examples/1-call-site/: bias.pl  bk.pl  exs.pl
examples/1-object-1-type-heappointsto/: bias.pl  bk.pl  exs.pl
examples/1-object-1-type-pointsto/: bias.pl  bk.pl  exs.pl
examples/1-object-1-type-pointsto_objcont/: bias.pl  bk.pl  exs.pl
examples/1-object-heappointsto/: bias.pl  exs.pl
examples/1-object-pointsto/: bias.pl  exs.pl
examples/1-type-heappointsto/: bias.pl  bk.pl
examples/1-type-pointsto/: bias.pl  exs.pl
examples/1d_flip/: bias.pl  bk.pl  exs.pl  test.pl
examples/1d_pcopy_1c/: bias.pl  bk.pl  exs.pl  test.pl
examples/2-call-site-heappointsto/: bias.pl  exs.pl
examples/2-call-site-pointsto/: bias.pl  bk.pl  exs.pl
examples/CD-iggp-attrition/: bias.pl  bk-all.pl  bk1.pl  exs.pl  exs1.pl
examples/CD-iggp-buttons/: bias.pl  bk-all.pl  bk.pl  exs.pl
examples/CD-iggp-coins/: bias.pl
examples/CD-iggp-eight-puzzle/: bias.pl  bk-all.pl  bk.pl  bk1.pl  raw-parser.py
old/: joiner_asp.py.old  joiner_cpsat.py.old  joiner_sat.py.old
popper/: _canonicalise_hash.pyx  _gen_norec_clingo_capi.pxd  _gen_norec_clingo_capi.pyx  _gen_norec_id_native.pyx  abs_generate.py  alan.pl  allsat.py  asp.py  aspsolver.py  asptester.py  bkcons.py  combine.py  combine_helper.py  combine_mdl.py  combine_ms.py  combiner_mdl.py  combiner_size.py  compact_hash.py  constrain.py  core.py  cpsolver.py  explain.py  explain3.py  explain4.py  gen-new.py  gen2.py  gen3.py  gen5.py  gen6.py  gen_norec.py  gen_pi.py  gen_rec.py  generate.py  hasse.py  hasse2.py  joiner.py  log.py  logger.py  loop.py  maxsat.py  (+14 more)
(+582 files in other folders)
