[project]
name = "popper"
version = "4.5.0"
description = "Popper"
readme = "README.md"
authors = [
  { name="Andrew Cropper", email="andrew.cropper@helsinki.fi" }
]
requires-python = ">=3.13"
dependencies = [
  "clingo",
  "bitarray",
  "janus_swi",
  "python-sat",
  "pebble",
  "pypblib"
]

[project.scripts]
# This makes 'popper' work in your terminal again
popper = "popper.loop:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["popper*"]

[tool.setuptools.package-data]
popper = ["lp/*.pl"]

[tool.uv]
package = true